--- a/src/css/index.css
+++ b/src/css/index.css
@@ -134,7 +134,8 @@ body {
 .header {
   background: #fff;
   height: 100px;
-  width: 100%; }
+  width: 100%;
+  position: relative; }
   .header .headerCen {
     width: 1090px;
     height: 100px;
@@ -160,19 +161,23 @@ body {
         border: 2px solid red;
         border-radius: 40px;
         position: absolute; }
-        .header .headerCen .headerSearch .search span {
+        .header .headerCen .headerSearch .search > span {
           position: absolute;
           font-size: 20px;
           color: #ccc;
           top: 10px;
           left: 10px; }
-        .header .headerCen .headerSearch .search input {
+        .header .headerCen .headerSearch .search > input {
           position: absolute;
           top: 2px;
           left: 35px;
           height: 35px;
           width: 450px;
           border: 0;
+          color: #999;
+          letter-spacing: 1px;
+          line-height: 24px;
+          font-size: 13px;
           outline: none; }
       .header .headerCen .headerSearch .button {
         width: 60px;
@@ -180,10 +185,11 @@ body {
         background: #ff2337;
         border-radius: 44px;
         position: absolute;
-        z-index: 2;
+        z-index: 5;
         top: 0;
         text-align: center;
-        right: -515px; }
+        right: -55px;
+        cursor: pointer; }
         .header .headerCen .headerSearch .button span {
           font-size: 24px;
           font-weight: 800;
@@ -191,6 +197,19 @@ body {
           line-height: 44px; }
         .header .headerCen .headerSearch .button:hover {
           background-color: #e00; }
+      .header .headerCen .headerSearch > ul {
+        line-height: 22px;
+        margin-top: 45px;
+        width: 461px;
+        height: 22px;
+        overflow: hidden; }
+        .header .headerCen .headerSearch > ul > li {
+          float: left;
+          white-space: nowrap;
+          margin-left: 30px; }
+          .header .headerCen .headerSearch > ul > li > a {
+            color: #999;
+            font-size: 12px; }
     .header .headerCen > .cart {
       height: 40px;
       width: 90px;
@@ -345,7 +364,61 @@ body {
   margin-top: 20px;
   margin-bottom: 30px;
   background: url(./../../static/images/indexItems.webp) no-repeat center top;
-  background-size: 1920px 332px; }
+  background-size: 1920px 332px;
+  position: relative;
+  /*限时购*/
+  /*热门品牌  */ }
+  .items .hangLeft {
+    position: absolute;
+    top: 0;
+    left: 7%;
+    background-color: #fff; }
+    .items .hangLeft .channel {
+      border: 1px solid #eaeaea;
+      border-bottom: none; }
+      .items .hangLeft .channel li > a {
+        display: block;
+        height: 50px;
+        line-height: 50px;
+        padding-left: 9px;
+        padding-right: 6px;
+        font-size: 14px;
+        font-weight: 700;
+        color: #333;
+        text-align: left;
+        text-decoration: none;
+        border-bottom: 1px solid #eaeaea; }
+      .items .hangLeft .channel li:hover a {
+        color: red; }
+    .items .hangLeft .floor {
+      border: 1px solid #eaeaea;
+      border-top: none;
+      padding: 10px 0; }
+      .items .hangLeft .floor li > a {
+        display: block;
+        height: 32px;
+        line-height: 32px;
+        padding-left: 9px;
+        font-size: 12px;
+        color: #999;
+        text-decoration: none; }
+      .items .hangLeft .floor li:hover a {
+        color: red; }
+  .items .hangRight {
+    position: absolute;
+    top: 0;
+    right: 7%;
+    background-color: #fff; }
+    .items .hangRight ul li {
+      height: 62px;
+      width: 62px;
+      line-height: 62px;
+      font-size: 12px;
+      cursor: pointer;
+      text-align: center;
+      border: 1px solid #eaeaea; }
+      .items .hangRight ul li:hover {
+        color: red; }
   .items .itemsCen {
     position: relative;
     width: 1090px;
@@ -357,86 +430,221 @@ body {
       display: block;
       height: 332px;
       width: 22%; }
-
-/*限时购*/
-.limited {
-  width: 100%;
-  margin-bottom: 30px; }
-  .limited .limitedCen {
-    width: 1090px;
-    margin: 0 auto; }
-    .limited .limitedCen > h2 {
-      color: #333;
-      height: 74px;
-      padding-top: 25px;
-      border-top: 1px solid #e9e9e9;
-      margin: 0;
-      box-sizing: border-box; }
-    .limited .limitedCen section {
-      border-top: 1px solid #e9e9e9; }
-      .limited .limitedCen section ul {
-        width: 840px;
-        float: left;
-        list-style: none; }
-        .limited .limitedCen section ul li {
-          position: relative;
-          float: left;
-          width: 418px;
-          height: 189px;
-          border-right: 1px solid #eaeaea;
-          border-bottom: 1px solid #eaeaea;
-          background-color: #fff; }
-          .limited .limitedCen section ul li .goods {
-            width: 50%;
-            float: left; }
-          .limited .limitedCen section ul li .discrips {
-            float: left; }
-      .limited .limitedCen section aside {
-        width: 250px;
-        float: right; }
-        .limited .limitedCen section aside img {
-          display: block; }
-
-/*热门品牌  */
-.hotBrand {
-  width: 100%; }
-  .hotBrand .brandCen {
-    width: 1090px;
-    margin: 0 auto; }
-    .hotBrand .brandCen h2 {
-      height: 74px;
-      padding-top: 25px;
-      border-top: 1px solid #e9e9e9;
-      margin: 0;
-      box-sizing: border-box; }
-    .hotBrand .brandCen .brand {
-      height: 355px;
-      overflow: hidden; }
-      .hotBrand .brandCen .brand .flexedBrand {
-        position: relative;
-        float: left;
-        margin-right: -220px;
-        width: 219px;
-        overflow: hidden;
-        border-right: 1px solid #e9e9e9; }
-      .hotBrand .brandCen .brand .recomBrand {
-        float: left;
-        margin: 0 -1px 0 220px;
+  .items .limited {
+    width: 100%;
+    margin-bottom: 30px; }
+    .items .limited .limitedCen {
+      width: 1090px;
+      margin: 0 auto; }
+      .items .limited .limitedCen > h2 {
+        color: #333;
+        height: 74px;
+        padding-top: 25px;
         border-top: 1px solid #e9e9e9;
-        background-color: #fff; }
-        .hotBrand .brandCen .brand .recomBrand li {
-          list-style: none;
+        margin: 0;
+        box-sizing: border-box; }
+      .items .limited .limitedCen section {
+        border-top: 1px solid #e9e9e9; }
+        .items .limited .limitedCen section ul {
+          width: 840px;
           float: left;
-          width: 25%; }
-          .hotBrand .brandCen .brand .recomBrand li img {
-            display: block;
-            margin: 12px auto 0;
-            width: 120px;
-            height: 120px; }
-          .hotBrand .brandCen .brand .recomBrand li p {
-            margin: 10px -90px 0;
-            text-align: center;
-            white-space: nowrap;
+          list-style: none; }
+          .items .limited .limitedCen section ul li {
+            position: relative;
+            float: left;
+            width: 418px;
+            height: 189px;
+            border-right: 1px solid #eaeaea;
+            border-bottom: 1px solid #eaeaea;
+            background-color: #fff;
+            display: flex; }
+            .items .limited .limitedCen section ul li .goods {
+              width: 50%;
+              float: left;
+              position: relative; }
+            .items .limited .limitedCen section ul li .discrips {
+              float: left;
+              width: 205px;
+              height: 188px; }
+              .items .limited .limitedCen section ul li .discrips .intro {
+                margin: 16px  6px;
+                height: 25px;
+                overflow: hidden;
+                white-space: nowrap;
+                -o-text-overflow: ellipsis;
+                text-overflow: ellipsis; }
+              .items .limited .limitedCen section ul li .discrips .shortTitle {
+                overflow: hidden;
+                height: 36px;
+                word-break: break-all;
+                word-wrap: break-word;
+                line-height: 20px;
+                overflow: hidden;
+                font-size: 12px;
+                color: #999; }
+              .items .limited .limitedCen section ul li .discrips .price {
+                margin: 10px 0 33px;
+                font-size: 20px;
+                font-weight: 700;
+                color: #ff1e32; }
+              .items .limited .limitedCen section ul li .discrips .btn {
+                display: inline-block;
+                position: absolute;
+                bottom: 20px;
+                right: 10px;
+                width: 80px;
+                height: 36px;
+                line-height: 36px;
+                border: 1px solid #ff1e32;
+                text-align: center;
+                font-size: 14px;
+                color: #ff1e32;
+                text-decoration: none;
+                -webkit-border-radius: 36px;
+                -moz-border-radius: 36px;
+                border-radius: 36px; }
+        .items .limited .limitedCen section aside {
+          width: 250px;
+          float: right; }
+          .items .limited .limitedCen section aside img {
+            display: block; }
+  .items .hotBrand {
+    width: 100%; }
+    .items .hotBrand .brandCen {
+      width: 1090px;
+      margin: 0 auto;
+      padding-bottom: 20px;
+      border-bottom: 1px solid #e8e8e8; }
+      .items .hotBrand .brandCen h2 {
+        height: 74px;
+        padding-top: 25px;
+        border-top: 1px solid #e9e9e9;
+        margin: 0;
+        box-sizing: border-box; }
+      .items .hotBrand .brandCen .brand {
+        height: 355px;
+        overflow: hidden;
+        position: relative; }
+        .items .hotBrand .brandCen .brand .fixedBrand {
+          position: absolute;
+          float: left;
+          margin-right: -220px;
+          width: 219px;
+          overflow: hidden;
+          border-right: 1px solid #e9e9e9; }
+          .items .hotBrand .brandCen .brand .fixedBrand img {
+            width: 219px;
+            display: block; }
+          .items .hotBrand .brandCen .brand .fixedBrand .text {
+            height: 123px;
+            background-color: #151515;
+            color: #fff;
             overflow: hidden;
-            font-size: 14px;
-            font-weight: 700; }
+            text-align: center; }
+            .items .hotBrand .brandCen .brand .fixedBrand .text .name {
+              display: block;
+              margin: 10px 12px;
+              font-size: 20px;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              white-space: nowrap; }
+            .items .hotBrand .brandCen .brand .fixedBrand .text .desc {
+              display: block;
+              margin: 10px 12px;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              white-space: nowrap;
+              font-size: 14px; }
+        .items .hotBrand .brandCen .brand .recomBrand {
+          float: left;
+          margin: 0 -1px 0 220px;
+          border-top: 1px solid #e9e9e9;
+          background-color: #fff; }
+          .items .hotBrand .brandCen .brand .recomBrand li {
+            list-style: none;
+            float: left;
+            width: 25%;
+            box-sizing: border-box;
+            border-bottom: 1px solid #e9e9e9;
+            border-right: 1px solid #e9e9e9; }
+            .items .hotBrand .brandCen .brand .recomBrand li img {
+              display: block;
+              margin: 12px auto 0;
+              width: 120px;
+              height: 120px; }
+            .items .hotBrand .brandCen .brand .recomBrand li p {
+              margin: 10px -90px 0;
+              padding-bottom: 10px;
+              text-align: center;
+              white-space: nowrap;
+              overflow: hidden;
+              font-size: 14px;
+              font-weight: 700; }
+
+.footerWrap {
+  background: #fff;
+  border-top: 1px solid #eaeaea; }
+  .footerWrap .footerCen {
+    width: 1100px;
+    margin: 0 auto;
+    background-color: transparent;
+    text-align: left;
+    font-size: inherit;
+    color: inherit;
+    cursor: default;
+    display: block; }
+    .footerWrap .footerCen .footerList {
+      padding: 49px 0;
+      border-bottom: 1px solid #eaeaea;
+      zoom: 1; }
+      .footerWrap .footerCen .footerList ul li {
+        float: left;
+        width: 233px;
+        margin-left: 42px; }
+        .footerWrap .footerCen .footerList ul li .fontIcon {
+          width: 44px;
+          height: 44px;
+          border-radius: 50%;
+          border: 2px solid #d6d6d6;
+          text-align: center;
+          line-height: 44px;
+          font-size: 20px;
+          font-weight: 700;
+          margin-right: 12px;
+          float: left; }
+        .footerWrap .footerCen .footerList ul li > b {
+          font-size: 18px;
+          font-weight: 700; }
+        .footerWrap .footerCen .footerList ul li > span {
+          display: block;
+          line-height: 22px; }
+
+.footerLogo {
+  width: 100%;
+  background-color: #fff;
+  border-bottom: 1px solid #000; }
+  .footerLogo .footerLogoCen {
+    width: 1100px;
+    margin: 0 auto; }
+    .footerLogo .footerLogoCen > img {
+      width: 1100px; }
+
+.footer {
+  padding: 20px 0;
+  line-height: 26px;
+  text-align: center;
+  font-size: 12px;
+  background-color: #333;
+  color: #fff; }
+  .footer a {
+    text-decoration: none;
+    color: #000;
+    font-weight: 200;
+    color: #fff; }
+  .footer > p > a {
+    padding: 0 15px; }
+  .footer .icon {
+    height: 30px; }
+    .footer .icon > img {
+      height: 30px;
+      margin: 5px 15px 0 0; }
