--- a/src/css/register.css
+++ b/src/css/register.css
@@ -96,7 +96,8 @@
           background: red;
           color: white;
           font-size: 18px;
-          text-align: center; }
+          text-align: center;
+          cursor: pointer; }
 
 .footer {
   padding: 20px 0;
