--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -11,7 +11,6 @@ a{
 body{
     background-color: #F6F6F6;
 }
-
 .clearFix::after{
     content:"";
     clear:both;
@@ -20,7 +19,6 @@ body{
     overflow:hidden;
     visibility:hidden;
 }
-
 @font-face {
     font-family: 'iconfont';
     src: url('./../../static/iconfont/iconfont.eot');
@@ -173,6 +171,7 @@ body{
     background:#fff;
     height:100px;
     width:100%;
+    position:relative;
     .headerCen{
         width:1090px;
         height:100px;
@@ -201,23 +200,26 @@ body{
                 border:2px solid red;
                 border-radius:40px;
                 position:absolute;
+                
                 // top:20px;
                 // left:350px;
-                span{
+                >span{
                     position:absolute;
                     font-size:20px;
                     color:#ccc;
                     top:10px;
                     left:10px;
                 }
-                input{
+                >input{
                     position:absolute;
                     top:2px;
                     left:35px;
                     height:35px;
                     width:450px;
                     border:0;
-                    outline:none;
+                    color:#999;letter-spacing:1px;line-height: 24px;
+                    font-size: 13px;
+                    outline:none; 
                 }
             }
             .button{
@@ -226,10 +228,11 @@ body{
                 background: #ff2337;
                 border-radius: 44px;
                 position: absolute;
-                z-index:2;
+                z-index:5;
                 top: 0;
                 text-align:center;
-                right: -515px;
+                right:-55px;
+                cursor:pointer;
                 span{
                     font-size:24px;
                     font-weight:800;
@@ -240,6 +243,23 @@ body{
                     background-color: #e00;
 
                 }
+            }
+            >ul{
+                line-height: 22px;
+                margin-top: 45px;
+                width: 461px;
+                height: 22px;
+                overflow: hidden;
+                // display:flex;
+                >li{
+                    float: left;
+                    white-space: nowrap;
+                    margin-left: 30px;
+                    >a{
+                        color: #999;
+                        font-size:12px;
+                    }
+                } 
             }
         } 
         >.cart{
@@ -453,6 +473,74 @@ body{
     margin-bottom:30px;
     background:url(./../../static/images/indexItems.webp) no-repeat center top;
     background-size:1920px 332px;
+    position:relative;
+    .hangLeft{
+        position:absolute;
+        top:0;
+        left:7%; 
+        background-color: #fff;
+        .channel{
+            border: 1px solid #eaeaea;
+            border-bottom: none;
+            li{
+                >a{
+                display: block;
+                height: 50px;
+                line-height: 50px;
+                padding-left: 9px;
+                padding-right:6px;
+                font-size: 14px;
+                font-weight: 700;
+                color: #333;
+                text-align:left;
+                text-decoration: none;
+                border-bottom: 1px solid #eaeaea; 
+                }
+                &:hover a{
+                    color:red;
+                }
+            }
+        }
+        .floor{
+            border: 1px solid #eaeaea;
+            border-top: none;
+            padding: 10px 0;
+            li{
+                >a{
+                    display: block;
+                    height: 32px;
+                    line-height: 32px;
+                    padding-left: 9px;
+                    font-size: 12px;
+                    color: #999;
+                    text-decoration: none;
+                }
+                &:hover a{
+                    color:red;
+                }
+            }
+        }
+    }
+    .hangRight{
+        position:absolute;
+        top:0;
+        right:7%;
+        background-color: #fff;
+        ul{
+            li{
+                height:62px;
+                width:62px;
+                line-height:62px;
+                font-size: 12px;
+                cursor: pointer;
+                text-align: center;
+                border:1px solid #eaeaea;
+                &:hover{
+                    color:red;
+                }
+            }
+        }
+    }
     .itemsCen{
         position:relative;
         width:1090px;
@@ -466,114 +554,280 @@ body{
             width:22%;
         }
     }
-}
 /*限时购*/
-.limited{
-    width:100%;
-    margin-bottom:30px;
-    .limitedCen{
-        width:1090px;
-        margin:0 auto;
-        >h2{
-            // font-size: 22px;
-            color: #333;
-            // font-weight:600px;
-            height: 74px;
-            padding-top: 25px;
-            border-top: 1px solid #e9e9e9;
-            margin: 0;
-            box-sizing: border-box;
-        }
-        section{
-            border-top:1px solid #e9e9e9;
-            ul{
-                width:840px;
-                float:left;
-                // display:flex;
-                list-style:none;
-                // flex-wrap:wrap;
-                li{
-                    position: relative;
-                    float: left;
-                    width: 418px;
-                    height: 189px;
-                    border-right: 1px solid #eaeaea;
-                    border-bottom: 1px solid #eaeaea;
-                    background-color: #fff;
-                    .goods{
-                        width:50%;
-                        float:left;
-                    }
-                    .discrips{
-                        float:left;
-                    }
-                }
-            }
-            aside{
-                width:250px;
-                float:right;
-                img{
-                    display:block;
-                }
-            }
-        }
-    }
-}
-/*热门品牌  */
-.hotBrand{
-    width:100%;
-    .brandCen{
-        width:1090px;
-        margin:0 auto;
-        h2{
-            height: 74px;
-            padding-top: 25px;
-            border-top: 1px solid #e9e9e9;
-            margin: 0;
-            box-sizing: border-box;
-        }
-        .brand{
-            height: 355px;
-            overflow: hidden;
-            .flexedBrand{
-                position: relative;
-                float: left;
-                margin-right: -220px;
-                width: 219px;
-                overflow: hidden;
-                border-right: 1px solid #e9e9e9;
-
-            }
-            .recomBrand{
-                float: left;
-                margin: 0 -1px 0 220px;
+    .limited{
+        width:100%;
+        margin-bottom:30px;
+        .limitedCen{
+            width:1090px;
+            margin:0 auto;
+            >h2{
+                // font-size: 22px;
+                color: #333;
+                // font-weight:600px;
+                height: 74px;
+                padding-top: 25px;
                 border-top: 1px solid #e9e9e9;
-                background-color: #fff;
-                li{
-                    list-style:none;
+                margin: 0;
+                box-sizing: border-box;
+            }
+            section{
+                border-top:1px solid #e9e9e9;
+                ul{
+                    width:840px;
                     float:left;
-                    width:25%;
-                    img{
-                        display: block;
-                        margin: 12px auto 0;
-                        width: 120px;
-                        height: 120px;
+                    // display:flex;
+                    list-style:none;
+                    // flex-wrap:wrap;
+                    li{
+                        position: relative;
+                        float: left;
+                        width: 418px;
+                        height: 189px;
+                        border-right: 1px solid #eaeaea;
+                        border-bottom: 1px solid #eaeaea;
+                        background-color: #fff;
+                        display:flex;
+                        .goods{
+                            width:50%;
+                            float:left;
+                            position:relative;
+                        }
+                        .discrips{
+                            float:left;
+                            width: 205px;
+                            height: 188px;
+                            .intro{
+                                margin: 16px  6px;
+                                height: 25px;
+                                overflow: hidden;
+                                white-space: nowrap;
+                                -o-text-overflow: ellipsis;
+                                text-overflow: ellipsis;
+                            }
+                            .shortTitle{
+                                overflow: hidden;
+                                height: 36px;
+                                word-break: break-all;
+                                word-wrap: break-word;
+                                line-height: 20px;
+                                overflow: hidden;
+                                font-size: 12px;
+                                color: #999;
+                            }
+                            .price{
+                                margin: 10px 0 33px;
+                                font-size: 20px;
+                                font-weight: 700;
+                                color: #ff1e32;
+                            }
+                            .btn{
+                                display: inline-block;
+                                position: absolute;
+                                bottom: 20px;
+                                right: 10px;
+                                width: 80px;
+                                height: 36px;
+                                line-height: 36px;
+                                border: 1px solid #ff1e32;
+                                text-align: center;
+                                font-size: 14px;
+                                color: #ff1e32;
+                                text-decoration: none;
+                                -webkit-border-radius: 36px;
+                                -moz-border-radius: 36px;
+                                border-radius: 36px;
+                            }
+                        }
                     }
-                    p{
-                        margin: 10px -90px 0;
-                        text-align: center;
-                        white-space: nowrap;
-                        overflow: hidden;
-                        font-size: 14px;
-                        font-weight: 700;
+                }
+                aside{
+                    width:250px;
+                    float:right;
+                    img{
+                        display:block;
                     }
                 }
             }
         }
     }
+/*热门品牌  */
+    .hotBrand{
+        width:100%;
+        
+        .brandCen{
+            width:1090px;
+            margin:0 auto;
+            padding-bottom:20px;
+            border-bottom:1px solid #e8e8e8;
+            h2{
+                height: 74px;
+                padding-top: 25px;
+                border-top: 1px solid #e9e9e9;
+                margin: 0;
+                box-sizing: border-box;
+            }
+            .brand{
+                height: 355px;
+                overflow: hidden;
+                position:relative;
+                .fixedBrand{
+                    position: absolute;
+                    float: left;
+                    margin-right: -220px;
+                    width: 219px;
+                    overflow: hidden;
+                    border-right: 1px solid #e9e9e9;
+                    img{
+                        width:219px;
+                        display:block;
+                    }
+                    .text{
+                        height: 123px;
+                        background-color: #151515;
+                        color: #fff;
+                        overflow:hidden;
+                        text-align:center;
+                        .name{
+                            display:block;
+                            margin: 10px 12px;
+                            font-size:20px;
+                            overflow: hidden;
+                            text-overflow: ellipsis;
+                            white-space: nowrap;
+                        } 
+                        .desc{
+                            display:block;
+                            margin: 10px 12px; 
+                            overflow: hidden;
+                            text-overflow: ellipsis;
+                            white-space: nowrap;
+                            font-size:14px;
+                        }
+                    }
+                }
+                .recomBrand{
+                    float: left;
+                    margin: 0 -1px 0 220px;
+                    border-top: 1px solid #e9e9e9;
+                    background-color: #fff;
+                    li{
+                        list-style:none;
+                        float:left;
+                        width:25%;
+                        box-sizing: border-box;
+                        border-bottom:1px solid #e9e9e9;
+                        border-right:1px solid #e9e9e9;
+                        img{
+                            display: block;
+                            margin: 12px auto 0;
+                            width: 120px;
+                            height: 120px;
+                        }
+                        p{
+                            margin: 10px -90px 0;
+                            padding-bottom:10px;
+                            text-align: center;
+                            white-space: nowrap;
+                            overflow: hidden;
+                            font-size: 14px;
+                            font-weight: 700;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
 }
 
 
+//尾部
 
+.footerWrap{
+    background: #fff;
+    border-top: 1px solid #eaeaea;
+    .footerCen{
+        width: 1100px;
+        margin: 0 auto;
+        background-color: transparent;
+        text-align: left;
+        font-size: inherit;
+        color: inherit;
+        cursor: default;
+        display: block;
+        .footerList{
+            padding: 49px 0;
+            border-bottom: 1px solid #eaeaea;
+            zoom: 1; 
+            ul li{
+                float: left;
+                width: 233px;
+                margin-left: 42px;
+                .fontIcon{
+                    width: 44px;
+                    height: 44px;
+                    border-radius: 50%;
+                    border: 2px solid #d6d6d6;
+                    text-align: center;
+                    line-height: 44px;
+                    font-size: 20px;
+                    font-weight: 700;
+                    // display: inline-block;
+                    margin-right: 12px;
+                    float:left; 
+                }
+                >b{
+                    font-size: 18px;
+                    font-weight: 700;
 
+                }
+                >span{
+                    display: block;
+                    line-height: 22px;
+                }
+            }
+        }
+    }
+}
+//2
+.footerLogo{
+    width:100%;
+    background-color: #fff;
+    border-bottom:1px solid #000;
+    .footerLogoCen{
+        width:1100px;
+        margin:0 auto;
+        >img{
+            width:1100px; 
+        }
+    }
+}
+
+.footer{
+    padding:20px 0;
+    line-height: 26px;
+    text-align: center;
+    font-size:12px;
+    background-color:#333; 
+    color:#fff;
+    a{
+        text-decoration:none;
+        color:#000;
+        font-weight:200;
+        color:#fff;
+
+    }
+    >p>a{
+        padding:0 15px;
+
+    }
+    .icon{
+        height:30px;
+        >img{
+            height: 30px;
+            margin: 5px 15px 0 0;
+        }
+    }
+}
 
