--- a/src/sass/login.scss
+++ b/src/sass/login.scss
@@ -104,7 +104,7 @@
                     color:white;
                     font-size:18px;
                     text-align:center;
-
+                    cursor:pointer;
                 }
             }
             .quick{
