--- a/src/sass/register.scss
+++ b/src/sass/register.scss
@@ -108,6 +108,7 @@
                     color:white;
                     font-size:18px;
                     text-align:center;
+                    cursor:pointer;
                 }
             }
         }
