--- a/src/views/detail.html
+++ b/src/views/detail.html
@@ -18,8 +18,8 @@
                 <div class="topNavCenter">
                     <div class="left">
                         <span>考拉欢迎您！</span>
-                        <a href="./../src/views/login.html">登陆</a>
-                        <a href="./../src/views/register.html">免费注册</a>
+                        <a href="./login.html">登陆</a>
+                        <a href="./register.html">免费注册</a>
                         <a class="chart" href="javascript:0;">手机考拉
                         <span><img src="./../../static/images/chart.png"><p>下载APP</p>
                             <p>领1000元新人礼包</p>
@@ -96,38 +96,8 @@
 
         <!-- 使用container -->
         <div class="container">
-                <!-- <div class="box"><div class="middle">
-                        <img src="./../../static/images/middle1.jpg" alt="">
-                        <div class="shadow"></div>
-                    </div>
-                    <div class="big" ></div></div>
-                    <div class="buy">
-                                <h2>喷雾</h2>
-                                <span>美丽的化妆品</span>
-                                <p>价格：￥<b>68.5</b>元</p>
-                                <a class="cart" href="./cart.html">加入购物车</a>
-                                <a class="pay" href="">直接购买</a>
-                                <div class="evaluate">当前有10人评价</div>
-                        </div> -->
-        </div>
-        <!-- 插件 -->
-        <!-- <div class="exzoom" id="exzoom"> -->
-                <!--大图区域-->
-                <!-- <div class="exzoom_img_box"> -->
-                    <!-- <ul class='exzoom_img_ul'>
-                        <li><img src="./../../static/images/photos/img01.jpg" alt=""></li>
-                        <li><img src="./../../static/images/photos/img02.jpg" alt=""></li>
-                    </ul> -->
-                <!-- </div> -->
-                <!--缩略图导航-->
-                <!-- <div class="exzoom_nav"></div> -->
-                <!--控制按钮-->
-                <!-- <p class="exzoom_btn">
-                    <a href="javascript:void(0);" class="exzoom_prev_btn"> &lt; </a>
-                    <a href="javascript:void(0);" class="exzoom_next_btn"> &gt; </a>
-                </p>
-            </div> -->
 
+        </div>
 
 
             <!-- 商品评价 -->
@@ -169,6 +139,47 @@
                     </div>
                 </div>
             </div>
+
+<!-- 尾部 -->
+<div class="footerWrap">
+        <div class="footerCen">
+            <div class="footerList">
+                <ul class="clearFix">
+                    <li><div class="fontIcon">正</div><b>正品承诺</b><span>正品保障 假一赔十</span></li>
+                    <li><div class="fontIcon">低</div><b>低价保障</b><span>缩减中间环节 确保低价</span></li>
+                    <li><div class="fontIcon">退</div><b>30天无忧退货</b><span>国内退货 售后无忧</span></li>
+                    <li><div class="fontIcon">邮</div><b>满88包邮</b><span>部分特殊商品除外</span></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!-- 2 -->
+    <div class="footerLogo">
+        <div class="footerLogoCen">
+            <img src="./../../static/images/footerImg.jpg" alt="">
+        </div>
+    </div>
+    <!-- 3 -->
+<div class="footer">
+        <h4><a href="#">隐私政策</a>-<a href="#">考拉海购</a></h4>
+        <p>
+            <span>增值电信业务经营许可证：浙B2-20160288</span>
+            <a href="#">自营经营者信息</a> 
+            <span>（浙）网械平台备字[2018]第00007号</span>
+        </p>
+        <div class="copy">
+            <img src="./../../static/images/police.png">
+            <a href="#">浙公网安备 33010802002216号 </a>
+            <span>阿里巴巴版权所有©2003-2019</span>
+            <a href="#">互联网药品信息服务资格证书编号（浙）-2017-0027 </a>
+            <span>浙ICP备16011229号-6</span>
+        </div>
+        <div class="icon">
+            <img src="./../../static/images/icon1.png" alt="">
+            <img src="./../../static/images/icon2.png" alt="">
+            <img src="./../../static/images/icon3.gif" alt="">
+        </div>
+    </div>
 </body>
 <script src="./../js/cookie.js"></script>
 <script src="./../../node_modules/jquery/dist/jquery.js"></script>
@@ -184,11 +195,5 @@ var u=getCookie('username');
         location.href='./login.html'
     }
     }</script>
-<!-- <script src="./../js/jquery-1.11.0.min.js"></script> -->
-<!-- <script src="./../js/jquery.exzoom.js"></script> -->
-<!-- <script type="text/javascript">
-    $("#exzoom").exzoom({
-        autoPlay: false,
-    });//方法调用，务必在加载完后执行
-</script> -->
+
 </html>
