--- a/src/views/list.html
+++ b/src/views/list.html
@@ -102,7 +102,46 @@
                 </div>
             </div>
 </div>
-    
+    <!-- 尾部 -->
+    <div class="footerWrap">
+            <div class="footerCen">
+                <div class="footerList">
+                    <ul class="clearFix">
+                        <li><div class="fontIcon">正</div><b>正品承诺</b><span>正品保障 假一赔十</span></li>
+                        <li><div class="fontIcon">低</div><b>低价保障</b><span>缩减中间环节 确保低价</span></li>
+                        <li><div class="fontIcon">退</div><b>30天无忧退货</b><span>国内退货 售后无忧</span></li>
+                        <li><div class="fontIcon">邮</div><b>满88包邮</b><span>部分特殊商品除外</span></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <!-- 2 -->
+        <div class="footerLogo">
+            <div class="footerLogoCen">
+                <img src="./../../static/images/footerImg.jpg" alt="">
+            </div>
+        </div>
+        <!-- 3 -->
+    <div class="footer">
+            <h4><a href="#">隐私政策</a>-<a href="#">考拉海购</a></h4>
+            <p>
+                <span>增值电信业务经营许可证：浙B2-20160288</span>
+                <a href="#">自营经营者信息</a> 
+                <span>（浙）网械平台备字[2018]第00007号</span>
+            </p>
+            <div class="copy">
+                <img src="./../../static/images/police.png">
+                <a href="#">浙公网安备 33010802002216号 </a>
+                <span>阿里巴巴版权所有©2003-2019</span>
+                <a href="#">互联网药品信息服务资格证书编号（浙）-2017-0027 </a>
+                <span>浙ICP备16011229号-6</span>
+            </div>
+            <div class="icon">
+                <img src="./../../static/images/icon1.png" alt="">
+                <img src="./../../static/images/icon2.png" alt="">
+                <img src="./../../static/images/icon3.gif" alt="">
+            </div>
+        </div>
 </body>
 <script src="./../js/cookie.js"></script>
 <script src="./../js/promiseAjax.js"></script>
